Finish create a service for technical test
